Added Bubbles section. Updated Parking section

--- a/en/index.html
+++ b/en/index.html
@@ -109,8 +109,8 @@
                 <p class="tile-paragraph">Check the largest areas already mapped as bubbles, aiming to keep people grouped by business.</p>
               </div>
             </div></a>
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
+            <div class="modal fade bubbles-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document" style="width: 900px;">
                   <div class="modal-content">
                     <div class="modal-header">
                       <h3 class="modal-title" id="exampleModalLabel"><strong>Bubbles</strong>
@@ -120,6 +120,19 @@
                     </div>
                     <div class="modal-body">
                       <p>In this layout you can check the largest areas already mapped as bubbles, which are a suggestion of occupation aiming to keep people grouped by business and / or synergy with nearby areas. However, the office is flex, which means you can take anywhere you wish.</p>
+                      <div class="ns_slider modal_slider">
+                         <ul>
+                           <li>
+                              <img src="../assets/img/bubbles-01.JPG" />
+                           </li>
+                           <li>
+                              <img src="../assets/img/bubbles-02.JPG" />
+                           </li>
+                           <li>
+                              <img src="../assets/img/bubbles-03.JPG" />
+                           </li>
+                         </ul>
+                      </div>
                     </div>
                     <div class="modal-footer">
                       <a class="btn btn-success" style="color:White;" href="../assets/misc/bubbles.ppsx" target="_blank">Click here to know the suggestions of bubbles</a>
