--- a/en/transport.html
+++ b/en/transport.html
@@ -46,8 +46,8 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <div class="ns_tile_element" id="element_with_image">
-            <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="../assets/img/fake-map.png">
-              <div class="col-xs-6 col-sm-6 col-md-6">
+            <div class="col-xs-4 image-left"><img src="../assets/img/fake-map.jpg" style="width:100%;"></div>
+              <div class="col-xs-8">
                 <h2>our new address</h2>
                 <p class="text-center" style="display:block; margin-top:15%;"><big style="font-size: 1.25em;">Rua Werner Von Siemens, nº 111 Prédio 19 – Espaços 3 e 4 – Lapa de Baixo – São Paulo – SP – CEP 05069-900 </big></p>
               </div>
@@ -55,64 +55,71 @@
         </div>
         <div class="col-xs-12 col-sm-6">
           <div class="ns_tile_element" id="element_with_image">
-            <div class="col-xs-6">
-              <h2>Parking</h2>
-              <p>Parking for employees and guests:</p>
-              <ul>
-                  <li>XX vacancies at internal area</li>
-                  <li>XX vacancies at park </li>
-                  <li>XX parking vacancies at Rua Marina Zanfelicce, xx</li>
-              </ul>
-              <p>Subscriptions via email: <span style="color:red;">[Insert e-mail address]</span></p>
-            </div>
-            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/parking.jpg">
-          </div>
-        </div>
-                <div class="col-xs-12 col-sm-12 col-md-12">
-          <div class="ns_tile_element" id="element_without_image">
-            <div class="col-xs-12 col-sm-8">
-              <h2>Chartered Transportation</h2>
-              <h3>Charter Settings</h3>
-              <p>As announced in recent months, a committee (CMT) was set up to look for solutions to facilitate this transition, and Nokia chose to offer chartered transportation in São Paulo from May 2 and during the first year of office change.</p>
-              <p>In order to define the employees that would use the chartered transport, we opted for the enrollment through a link, in the 3 different schedulesfinishing when all the vacancies available were filled.</p>
-              <p>At these meetings of the Committee it was also decided that transportation would also extend to trainees and third parties.</p>
-              <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#exampleModal">Regras de uso</button>
-              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel"><strong>Regras de uso</strong>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span></h5>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <p>For the best use of all, some rules were defined for the use of this transport:</p>
-                      <ul>
-                      <li>The people registered for the charter will not have a vacancy in the parking lot of the Lapa office. However, if the enrollee receives transportation vouchers, the benefit will be maintained normally;</li>
-                        <li>You will only have the option to register to make use of the charter considering round trip. You can not sign up for one option only;</li>
-                        <li>The access of the charters will be by the entrance of the Marginal. Passengers should disembark in the proper retreat for this purpose and walk to the entrance of the office, as well as repeat the process on the return;</li>
-                        <li>The buses will respect the schedules for both the trip and the return, so we ask everyone to be there 10 minutes in advance;</li>
-                        <li>Those who drive to Anchieta can leave their vehicles in the parking lot until it is necessary to vacate the space. After that, the vehicles must be parked in another place, being the choice of this and the cost for each user account;</li>
-                        <li>In case of total vacancy of the Anchieta building, the departure point of the charters will be changed, with the new point still to be defined;</li>
-                        <li>The bus will take you to Anchieta-Lapa and Lapa-Anchieta. There will be no other stopping point, even if it is common to the route;</li>
-                        <li>No standing passengers will be allowed;</li>
-                        <li>If you choose time 1, 2 or 3, you must return in the corresponding time transport;</li>
-                        <li>In case of lost time, Nokia is not responsible for any expenses to get you to work in other ways. You can take the return transportation (according to your registration schedule) normally;</li>
-                        <li>If you miss your schedule, you can travel at other times if - and only if - there is a seat, with priority being given to the passengers enrolled for the time in question;</li>
-                        <li>Every day, in the round trip of the transport, will be verified the presence of each enrolled employee, the user that presents frequency less than 3 days in the week without justification will be invited to give his place to the employees who are on the waiting list.</li>
-                      </ul>
-                      <p>Every day, in the round trip of the transport, will be verified the presence of each enrolled employee, the user that presents frequency less than 3 days in the week without justification will be invited to give his place to the employees who are on the waiting list.<br><br>If you have any questions, please contact us by email: <a href="mailto:cristina.capitina@nokia.com" class="standard">cristina.capitina@nokia.com</a></p>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+              <div class="col-xs-12 col-sm-8">
+                <h2>Chartered Transportation</h2>
+                <h3>Charter Settings</h3>
+                <p>As announced in recent months, a committee (CMT) was set up to look for solutions to facilitate this transition, and Nokia chose to offer chartered transportation in São Paulo from May 2 and during the first year of office change.</p>
+                <p>In order to define the employees that would use the chartered transport, we opted for the enrollment through a link, in the 3 different schedulesfinishing when all the vacancies available were filled.</p>
+                <p>At these meetings of the Committee it was also decided that transportation would also extend to trainees and third parties.</p>
+                <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#exampleModal">Regras de uso</button>
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"><strong>Regras de uso</strong>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span></h5>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <p>For the best use of all, some rules were defined for the use of this transport:</p>
+                        <ul>
+                        <li>The people registered for the charter will not have a vacancy in the parking lot of the Lapa office. However, if the enrollee receives transportation vouchers, the benefit will be maintained normally;</li>
+                          <li>You will only have the option to register to make use of the charter considering round trip. You can not sign up for one option only;</li>
+                          <li>The access of the charters will be by the entrance of the Marginal. Passengers should disembark in the proper retreat for this purpose and walk to the entrance of the office, as well as repeat the process on the return;</li>
+                          <li>The buses will respect the schedules for both the trip and the return, so we ask everyone to be there 10 minutes in advance;</li>
+                          <li>Those who drive to Anchieta can leave their vehicles in the parking lot until it is necessary to vacate the space. After that, the vehicles must be parked in another place, being the choice of this and the cost for each user account;</li>
+                          <li>In case of total vacancy of the Anchieta building, the departure point of the charters will be changed, with the new point still to be defined;</li>
+                          <li>The bus will take you to Anchieta-Lapa and Lapa-Anchieta. There will be no other stopping point, even if it is common to the route;</li>
+                          <li>No standing passengers will be allowed;</li>
+                          <li>If you choose time 1, 2 or 3, you must return in the corresponding time transport;</li>
+                          <li>In case of lost time, Nokia is not responsible for any expenses to get you to work in other ways. You can take the return transportation (according to your registration schedule) normally;</li>
+                          <li>If you miss your schedule, you can travel at other times if - and only if - there is a seat, with priority being given to the passengers enrolled for the time in question;</li>
+                          <li>Every day, in the round trip of the transport, will be verified the presence of each enrolled employee, the user that presents frequency less than 3 days in the week without justification will be invited to give his place to the employees who are on the waiting list.</li>
+                        </ul>
+                        <p>Every day, in the round trip of the transport, will be verified the presence of each enrolled employee, the user that presents frequency less than 3 days in the week without justification will be invited to give his place to the employees who are on the waiting list.<br><br>If you have any questions, please contact us by email: <a href="mailto:cristina.capitina@nokia.com" class="standard">cristina.capitina@nokia.com</a></p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
+              <div class="col-xs-12 col-sm-4">
+               <img src="../assets/img/autobus.jpg" style="width: 100%;">
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-4">
-              <img src="../assets/img/autobus.jpg" alt="">
+          </div>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-6">
+              <h2>Parking</h2>
+              <ul>
+                <li><h4><strong>255 vacancies inside the condominium (Pockets A and E).</strong></h4></li>
+                <ul><li> Access by the ordinances of Werner Von Siemens Street or Marginal Tiete.</li>
+                <li>The vacancies of pockets A and E are rotating, with no demarcation of vacancies.</li>
+                <li> Since many employees make Homeoffice, we will register for this parking approximately 330 users (Index of sharing of 1.3 people per vacancy). The ratchets will control the accesses and the user number 256 will not have its entrance allowed, and must park in the parking lot of visitors of NETPARK and later requesting the stamp to credit with the WR</li></ul>
+                <li><h4><strong>160 parking spaces in NETPARK. Access by the left-hand entrance of Werner von Siemens Street.</strong></h4></li>
+                <ul><li>Access by the ordinance of Werner von Siemens Street.</li>
+                <li>The vacancies are rotating, there are no demarcation of vacancies and in some cases can be operated by valet</li>
+                <li> Since many employees make Homeoffice, we will register about 208 users (1.3 share per job share index). The ratchets will control the accesses and the user number 161 will not have its entrance allowed, and must park in the visitor parking lot of NETPARK and later request the stamp to credit with the WR</li></ul>
+                <li><h4><strong>Cast parking</strong></h4></li>
+                <ul> <li> The request for registration for parking use must be made by e-mail with information of the official (Name and registration number) and data of the vehicle (s) (Mark, model, year, color and plates sent to valdete. Barbosa.ext@nokia.com or vinicius.santos.ext@nokia.com</li>
+                <li>The vacancies are rotating, there are no demarcation of vacancies and in some cases can be operated by valet</li></ul>
+              </ul>
+            </div>
+            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/parking.jpg">
             </div>
         </div>
       </div>
