--- a/pt/index.html
+++ b/pt/index.html
@@ -109,8 +109,8 @@
                 <p class="tile-paragraph">Neste layout você pode checar as maiores áreas já mapeadas como bubbles que são uma sugestão de ocupação visando manter as pessoas agrupadas por negócio. </p>
               </div>
             </div></a>
-            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
+            <div class="modal fade bubbles-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document" style="width: 900px;">
                   <div class="modal-content">
                     <div class="modal-header">
                       <h3 class="modal-title" id="exampleModalLabel"><strong>Bubbles</strong>
@@ -120,10 +120,23 @@
                     </div>
                     <div class="modal-body">
                       <p>Neste layout você pode checar as maiores áreas já mapeadas como bubbles, que são uma sugestão de ocupação visando manter as pessoas agrupadas por negócio e/ou sinergia com áreas próximas. No entanto, o escritório é flex, o que significa que você pode ocupar qualquer lugar que desejar.</p>
+                      <div class="ns_slider modal_slider">
+                         <ul>
+                           <li>
+                              <img src="../assets/img/bubbles-01.JPG" />
+                           </li>
+                           <li>
+                              <img src="../assets/img/bubbles-02.JPG" />
+                           </li>
+                           <li>
+                              <img src="../assets/img/bubbles-03.JPG" />
+                           </li>
+                         </ul>
+                      </div>
                     </div>
                     <div class="modal-footer">
                       <a class="btn btn-success" style="color:White;" href="../assets/misc/bubbles.ppsx" target="_blank">Clique aqui para conhecer as sugestões de bubbles</a>
-                      <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
                     </div>
                   </div>
                 </div>
