--- a/pt/transport.html
+++ b/pt/transport.html
@@ -46,8 +46,9 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <div class="ns_tile_element" id="element_with_image">
-            <img class="col-xs-6 col-sm-6 col-md-6 image-left" src="../assets/img/fake-map.png">
-              <div class="col-xs-6 col-sm-6 col-md-6">
+            <div class="col-xs-4 image-left"><img src="../assets/img/fake-map.jpg" style="width:100%;"></div>
+            
+              <div class="col-xs-8">
                 <h2>NOSSO NOVO ENDEREÇO</h2>
                 <p class="text-center" style="display:block; margin-top:15%;"><big style="font-size: 1.25em;">Rua Werner Von Siemens, nº 111 Prédio 19 – Espaços 3 e 4 – Lapa de Baixo – São Paulo – SP – CEP 05069-900 </big></p>
               </div>
@@ -55,21 +56,6 @@
         </div>
         <div class="col-xs-12 col-sm-6">
           <div class="ns_tile_element" id="element_with_image">
-            <div class="col-xs-6">
-              <h2>Estacionamento</h2>
-              <p>Estacionamento para funcionários e externos:</p>
-              <ul>
-                  <li>XX vagas área interna</li>
-                  <li>XX vagas Net Park</li>
-                  <li>XX vagas Estacionamento Rua Marina Zanfelicce, xx</li>
-              </ul>
-              <p>Inscrições através do email <span style="color:red;">[Insert e-mail address]</span></p>
-            </div>
-            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/parking.jpg">
-          </div>
-        </div>
-                <div class="col-xs-12 col-sm-12 col-md-12">
-          <div class="ns_tile_element" id="element_without_image">
             <div class="col-xs-12 col-sm-8">
               <h2>Fretado</h2>
               <h3>Definições do Fretamento</h3>
@@ -109,8 +95,32 @@
               </div>
             </div>
             <div class="col-xs-12 col-sm-4">
-              <img src="../assets/img/autobus.jpg" alt="">
+              <img src="../assets/img/autobus.jpg" style="width: 100%;">
             </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+          <div class="ns_tile_element" id="element_without_image">
+            <div class="col-xs-6">
+              <h2>Estacionamento</h2>
+              <ul>
+                <li><h4><strong>255 vagas no interior do condomínio (Bolsões A e E).</strong></h4></li>
+                <ul><li> Acesso pelas portarias da Rua Werner Von Siemens ou Marginal Tietê.</li>
+                <li>As vagas dos bolsões A e E são rotativas, não havendo demarcação de vagas. </li>
+                <li>Tendo em vista que muitos funcionários fazem Homeoffice, cadastraremos para esse estacionamento cerca de 330 usuários (Índice de compartilhamento de 1,3 pessoas por vaga). As catracas controlarão os acessos e o usuário número 256 não terá sua entrada permitida, devendo estacionar no estacionamento de visitantes da NETPARK e solicitando posteriormente o selo para abono junto ao WR</li></ul>
+                <li><h4><strong>160 vagas no estacionamento  NETPARK. Acesso pela portaria da esquerda da Rua Werner Von Siemens.</strong></h4></li>
+                <ul><li>Acesso pela portaria da Rua Werner Von Siemens.</li>
+                <li>As vagas são rotativas, não havendo demarcação de vagas e em alguns casos podem ser operadas por manobrista</li>
+                <li>Tendo em vista que muitos funcionários fazem Homeoffice, cadastraremos para esse estacionamento cerca de 208 usuários (Índice de compartilhamento de 1,3 pessoas por vaga). As catracas controlarão os acessos e o usuário número 161 não terá sua entrada permitida, devendo estacionar no estacionamento de visitantes da NETPARK e solicitando posteriormente o selo para abono junto ao WR</li></ul>
+                <li><h4><strong>Cadastro estacionamento</strong></h4></li>
+                <ul>
+                  <li>A solicitação de cadastro para uso de estacionamento deverá ser feita através de email com dados do funcionário (Nome e número de matrícula) e dados do(s) veículo(s) (Marca, modelo, ano, cor e placas enviado para valdete.barbosa.ext@nokia.com ou vinicius.santos.ext@nokia.com </li>
+                <li>As vagas são rotativas, não havendo demarcação de vagas e em alguns casos podem ser operadas por manobrista</li>
+                </ul>
+              </ul>
+            </div>
+            <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/parking.jpg">
+          </div>            
         </div>
       </div>
     </div>
