Added redirection to PT from main index. Fixed bubbles modal

--- a/en/index.html
+++ b/en/index.html
@@ -38,19 +38,19 @@
             <div class="ns_slider carousel-long">
                <ul>
                  <li>
-                    <img src="../assets/img/slider_fach_01.JPG" />
+                    <img src="../assets/img/slider_fach_01.jpg" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_02.JPG" />
+                    <img src="../assets/img/slider_fach_02.jpg" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_03.JPG" />
+                    <img src="../assets/img/slider_fach_03.jpg" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_04.JPG" />
+                    <img src="../assets/img/slider_fach_04.jpg" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_05.JPG" />
+                    <img src="../assets/img/slider_fach_05.jpg" />
                  </li>
                </ul>
             </div>
@@ -101,7 +101,7 @@
             </div></a>
           </div>
           <div class="col-xs-12 col-md-4">
-            <a href="transport.html" data-toggle="modal" data-target="#exampleModal"><div class="ns_tile_element home cta-left" id="element_with_image">
+            <a href="" data-toggle="modal" data-target="#exampleModal"><div class="ns_tile_element home cta-left" id="element_with_image">
               <span class="cta">Click to see more</span>
               <img class="col-xs-6 col-sm-6 col-md-6 image-left image-right" src="../assets/img/workgroup.jpg">
               <div class="col-xs-6 col-sm-6 col-md-6">
@@ -123,13 +123,13 @@
                       <div class="ns_slider modal_slider">
                          <ul>
                            <li>
-                              <img src="../assets/img/bubbles-01.JPG" />
+                              <img src="../assets/img/bubbles-01.jpg" />
                            </li>
                            <li>
-                              <img src="../assets/img/bubbles-02.JPG" />
+                              <img src="../assets/img/bubbles-02.jpg" />
                            </li>
                            <li>
-                              <img src="../assets/img/bubbles-03.JPG" />
+                              <img src="../assets/img/bubbles-03.jpg" />
                            </li>
                          </ul>
                       </div>
