--- a/pt/index.html
+++ b/pt/index.html
@@ -38,19 +38,19 @@
             <div class="ns_slider carousel-long">
                <ul>
                  <li>
-                    <img src="../assets/img/slider_fach_01.jpg" />
+                    <img src="../assets/img/slider_fach_01.JPG" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_02.jpg" />
+                    <img src="../assets/img/slider_fach_02.JPG" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_03.jpg" />
+                    <img src="../assets/img/slider_fach_03.JPG" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_04.jpg" />
+                    <img src="../assets/img/slider_fach_04.JPG" />
                  </li>
                  <li>
-                    <img src="../assets/img/slider_fach_05.jpg" />
+                    <img src="../assets/img/slider_fach_05.JPG" />
                  </li>
                </ul>
             </div>
