Initial fix for IE11 Windows 7 users

--- a/pt/index.html
+++ b/pt/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>#JuntosSomosNokia</title>
   <link rel="stylesheet" href="../assets/styles/styles.css">
   <link rel="stylesheet" href="../assets/styles/unslider.css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+   <link rel="stylesheet" href="../assets/styles/font-awesome.min.css">
 </head>
 <body id="ns_body">
   <header id="ns_header">
