Fixed html error in modern.html English

--- a/en/modern.html
+++ b/en/modern.html
@@ -29,7 +29,8 @@
         </div>
       </div>
     </nav>
-  </header>ass="ns_carousel" id="section">
+  </header>
+  <section class="ns_carousel" id="section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
