Home panels rearrangement

--- a/pt/index.html
+++ b/pt/index.html
@@ -69,6 +69,19 @@
     <section class="ns_tiles">
       <div class="container-fluid">
         <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">
+              <a href="jsn.html"><div class="ns_tile_element home cta-center" id="element_without_image">
+                <div class="col-xs-12 image-left image-right">
+                  <img style="width:100%;" src="../assets/img/calendar-featured1.jpg">
+                </div>
+                <div class="col-xs-12">
+                  <h2><img src="../assets/img/juntossomosblack.png"></h2>
+                  <h2>Agenda de Eventos</h2>
+                  <p>Vocês já viram as surpresas que preparamos para os primeiros dias de lançamento? Confira a agenda do #juntossomosNokia e programe-se para estar com a gente na celebração da casa nova!</p>
+                </div>
+                <span class="cta">Clique para ver mais</span>
+              </div></a>
+            </div>
           <div class="col-xs-12 col-sm-6 col-md-6">
             <a href="modern.html"><div class="ns_tile_element home cta-left" id="element_with_image">
               <span class="cta">Clique para ver mais</span>
@@ -87,18 +100,6 @@
                 <p class="tile-paragraph">Informações úteis para ajudá-lo em suas atividades diárias, como conectar-se a redes no local, imprimir documentos, entrar em contato com o helpdesk e obter suporte adicional.</p>
               </div>
               <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/1433.jpg">
-            </div></a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-12">
-            <a href="jsn.html"><div class="ns_tile_element home cta-center" id="element_without_image">
-              <div class="col-xs-12 image-left image-right">
-                <img style="width:100%;" src="../assets/img/toght.jpg">
-              </div>
-              <div class="col-xs-12">
-                <h2><img src="../assets/img/juntossomosblack.png"></h2>
-                <p>Vocês já viram as surpresas que preparamos para os primeiros dias de lançamento? Confira a agenda do #juntossomosNokia e programe-se para estar com a gente na celebração da casa nova!</p>
-              </div>
-              <span class="cta">Clique para ver mais</span>
             </div></a>
           </div>
           <div class="col-xs-12 col-md-4">
