--- a/en/index.html
+++ b/en/index.html
@@ -69,6 +69,19 @@
     <section class="ns_tiles">
       <div class="container-fluid">
         <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <a href="jsn.html"><div class="ns_tile_element home cta-center" id="element_without_image">
+              <div class="col-xs-12 image-left image-right">
+                <img style="width:100%;" src="../assets/img/calendar-featured1.jpg">
+              </div>
+              <div class="col-xs-12">
+                <h2><img src="../assets/img/juntossomosblack.png"></h2>
+                <h2>Events calendar</h2>
+                <p>Have you seen the surprises that we have prepared for the first days of launch? Stay tuned with #juntossomosNokia agenda and schedule your time to share with us in the new site celebration!</p>
+              </div>
+              <span class="cta">Click to see more</span>
+            </div></a>
+          </div>
           <div class="col-xs-12 col-sm-6 col-md-6">
             <a href="modern.html"><div class="ns_tile_element home cta-left" id="element_with_image">
               <span class="cta">Click to see more</span>
@@ -87,18 +100,6 @@
                 <p class="tile-paragraph">Useful information to help you in your daily activities, such as connecting to site's network, printing documents, contacting helpdesk and some other additional support.</p>
               </div>
               <img class="col-xs-6 col-sm-6 col-md-6 image-right" src="../assets/img/1433.jpg">
-            </div></a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-12">
-            <a href="jsn.html"><div class="ns_tile_element home cta-center" id="element_without_image">
-              <div class="col-xs-12 image-left image-right">
-                <img style="width:100%;" src="../assets/img/toght.jpg">
-              </div>
-              <div class="col-xs-12">
-                <h2><img src="../assets/img/juntossomosblack.png"></h2>
-                <p>Have you seen the surprises that we have prepared for the first days of launch? Stay tuned with #juntossomosNokia agenda and schedule your time to share with us in the new site celebration!</p>
-              </div>
-              <span class="cta">Click to see more</span>
             </div></a>
           </div>
           <div class="col-xs-12 col-md-4">
