Fixed sizes on RH section. Added scroll to welcome layer

--- a/en/rh.html
+++ b/en/rh.html
@@ -45,9 +45,9 @@
   <section class="ns_tiles">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-xs-12 col-sm-6">
-          <div class="ns_tile_element" id="element_without_image">
-            <div class="col-sm-offset-1 col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-lg-6">
+          <div class="ns_tile_element hr-br" id="element_without_image">
+            <div class="col-sm-offset-1 col-xs-12 col-lg-8">
               <h2>HR Brazil</h2>
               <img src="../assets/img/rh-struct.jpg"/>
               <p>For service to employees, the HRC is the point of contact: Americas, Hrconnection (Nokia - Global) <a class="standard" href="mailto:hrconnection.americas@nokia.com">hrconnection.americas@nokia.com</a></p>
