--- a/pt/index.html
+++ b/pt/index.html
@@ -133,6 +133,9 @@
                            <li>
                               <img src="../assets/img/bubbles-03.jpg" />
                            </li>
+                           <li>
+                              <img src="../assets/img/bubbles-04.jpg" />
+                           </li>
                          </ul>
                       </div>
                     </div>
@@ -197,11 +200,11 @@
                   <div class="panel-heading">
                     <h4 class="panel-title">
                       E-business park
-                      <i id="collapse-fontawe2" class="fa fa-plus pull-right"></i>
+                      <i id="collapse-fontawe2" class="fa fa-minus pull-right"></i>
                     </h4>
                   </div>
                 </a>
-                <div class="panel-collapse collapse" id="collapse2">
+                <div class="panel-collapse collapse in" id="collapse2">
                   <a href="http://www.ebpark.com.br/" target="_blank"><div class="panel-body">
                     <div class="col-xs-12"><p>Veja aqui informações sobre o condomínio empresarial onde estamos inseridos e suas conveniências. </p></div> <span style="background:#4771a2; color:white; display: inline-block; float: right; padding: 5px;">Clique para ver mais</span>
                   </div></a>
