--- a/pt/rh.html
+++ b/pt/rh.html
@@ -46,7 +46,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-6">
-          <div class="ns_tile_element" id="element_without_image">
+          <div class="ns_tile_element hr-br" id="element_without_image">
             <div class="col-sm-offset-1 col-xs-12 col-sm-8">
               <h2>HR Brazil</h2>
               <img src="../assets/img/rh-struct.jpg"/>
