Edited text of JSN schedule per user request

--- a/pt/jsn.html
+++ b/pt/jsn.html
@@ -73,8 +73,9 @@
                 <div class="timeline-body">
                   <ul>
                     <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
-                    <li>Use seu vale surpresa para retirar seu milk shake na entrada lateral do prédio! </li>
-                    <li>Não deixe de assistir à programação da Nokia TV nas áreas de coffee e lounges. Temos um vídeo especial da inauguração do escritório e um vídeo de lançamento do programa de caronas corporativas bynd – que está muito divertido!</li>
+                    <li>O novo escritório da Nokia tem a nossa cara! Das 9h às 12h e das 13h às 16h, faça sua caricatura no átrio. Você vai usar o desenho para participar do sorteio no dia 5, então não deixe de fazer o seu!</li>
+                    <li>Das 11h às 12h, participe da sessão de boas-vindas no átrio com André Mendes</li>
+                    <li>Use seu vale surpresa para retirar seu milk shake na entrada lateral do prédio, das 13h às 16h</li>
                   </ul>
                 </div>
               </div>
@@ -89,8 +90,10 @@
                 <div class="timeline-body">
                   <ul>
                     <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
-                    <li>Use seu vale surpresa para retirar seu picolé Rochina no átrio</li>
-                    <li>Não deixe de assistir à programação da Nokia TV nas áreas de coffee e lounges. Temos um vídeo especial da inauguração do escritório e um vídeo de lançamento do programa de caronas corporativas bynd – que está muito divertido!</li>
+                    <li>O novo escritório da Nokia tem a nossa cara! Das 9h às 12h e das 13h às 16h, faça sua caricatura no átrio. Você vai usar o desenho para participar do sorteio no dia 5, então não deixe de fazer o seu!</li>
+                    <li>Das 9h às 10h, participe da sessão de boas-vindas no átrio com André Mendes</li>
+                    <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
+                    <li>Use seu vale surpresa para retirar seu picolé Rochina no átrio, das 13h às 16h</li>
                   </ul>
                 </div>
               </div>
@@ -105,8 +108,10 @@
                 <div class="timeline-body">
                   <ul>
                     <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
-                    <li>Use seu vale surpresa para retirar seu brigadeiro no átrio </li>
-                    <li>Não deixe de assistir à programação da Nokia TV nas áreas de coffee e lounges. Temos um vídeo especial da inauguração do escritório e um vídeo de lançamento do programa de caronas corporativas bynd – que está muito divertido!</li>
+                    <li>O novo escritório da Nokia tem a nossa cara! Das 9h às 12h e das 13h às 16h, faça sua caricatura no átrio. Você vai usar o desenho para participar do sorteio no dia 5, então não deixe de fazer o seu!</li>
+                    <li>Das 11h às 12h, participe da sessão de boas-vindas no átrio com André Mendes</li>
+                    <li>Queremos que você seja bem recebido em nossa nova casa. Não se esqueça de retirar seu brinde de boas-vindas na Recepcão</li>
+                    <li>Use seu vale surpresa para retirar seu brigadeiro no átrio, das 13h às 16h</li>
                   </ul>
                 </div>
               </div>
@@ -120,11 +125,10 @@
                 </div>
                 <div class="timeline-body">
                   <ul>
-                    <li>Das 9h às 13h e das 14h às 18h, faça sua caricatura com o profissional que estará no átrio. Tiraremos cópia da sua caricatura e colocaremos num painel especial que mostra a cara da nova Nokia!</li>
                     <li>Participe do Desafio da Caricatura e concorra ao sorteio de mochilas Nokia (a ser realizado durante o townhall das 14h)</li>
-                    <li>Não se esqueça de passar no totem de fotos e tirar a sua para guardar esse momento como lembrança! Compartilhe a sua foto nas redes sociais! </li>
+                    <li>Não se esqueça de passar no totem de fotos e tirar a sua para guardar esse momento como lembrança! Compartilhe a sua foto nas redes sociais!</li>
                     <li>Às 14h, Dimitri Diliani e Cleri Inhauser estarão no átrio para dar as boas-vindas oficiais e todos estão convidados. Dirija-se ao local ou, se preferir, acomode-se nas estacoes de trabalho ou nos espaços dos outros andares para ouvir o evento – não haverá apresentação de slides</li>
-                    <li>Retire seu cupcake comemorativo na saída! </li>
+                    <li>Retire seu cupcake comemorativo na saída!</li>
                   </ul>
                 </div>
               </div>
